feat: logging on ItemRequestController refactor: change model Item